--- a/Index.html
+++ b/Index.html
@@ -69,15 +69,15 @@
     <footer class="flex">
 
             <div class="previous">
-               <span> &laquo; Previous</span> 
+               <span id="getBack"> &laquo; Previous</span> 
             </div>
 
-            <div> 
+            <div id="page"> 
                 Page Number
             </div>
 
             <div class="next">
-                <span> Next &raquo;</span> 
+                <span id="goAhead"> Next &raquo;</span> 
             </div>
 
     </footer>
