--- a/Index.html
+++ b/Index.html
@@ -68,16 +68,16 @@
 
     <footer class="flex">
 
-            <div class="previous">
-               <span id="getBack"> &laquo; Previous</span> 
+            <div class="previous" id="getBack">
+               <span> &laquo; Previous</span> 
             </div>
 
             <div id="page"> 
                 Page Number
             </div>
 
-            <div class="next">
-                <span id="goAhead"> Next &raquo;</span> 
+            <div class="next" id="goAhead">
+                <span> Next &raquo;</span> 
             </div>
 
     </footer>
